<resources>
    <integer name="com_vk_sdk_AppId">5907069</integer>
    <string name="facebook_app_id">104720850045534</string>
    <string name="app_name">День Вышки 2017</string>
    <string name="continue_with_vk">Продолжить с VK</string>
    <string name="or">OR</string>
    <string name="login_back">Назад</string>
    <string name="comment_textview_hint">Что происходит?</string>
    <string name="faculty_title">Title</string>
    <string name="faculty_information">Information</string>
    <string name="from_camera">Камера</string>
    <string name="from_gallery">Галерея</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_login">ВОЙТИ</string>
    <string name="navigation_logout">ВЫЙТИ</string>
    <string name="navigation_map">КАРТА</string>
    <string name="navigation_faculties">ФАКУЛЬТЕТЫ</string>
    <string name="navigation_organisations">ОРГАНИЗАЦИИ</string>
    <string name="navigation_aboutHSE">О ВШЭ</string>
    <string name="navigation_posvyashenie">ПОСВЯЩЕНИЕ</string>
    <string name="hse_day">ДЕНЬ ВЫШКИ</string>
    <string name="departments">Направления</string>
    <string name="contancts">Контакты</string>
    <string name="about_hse_title">Национальный исследовательский университет \'Высшая школа экономики\'</string>
    <string name="about_hse_text">Один из лучших вузов социально-экономичекого профиля в России. НИУ ВШЭ готовит высококлассных востребованных специалистов
    не только в области экономических, социальных наук и менеджмента, но и по гуманитарным, физико-математическим, техническим
    направлениям, дизайну и рекламе. Сегодня Высшая школа экономики - это: 4 кампуса(Москва, Санкт-Петербург, Нижний Новгород, Пермь) 20000 студентов. "\n\n"<b>Контакты</b>
    "\n"+79104194939"\n"
    https://www.hse.ru"\n"
    hse.inc@gmail.com</string>


    <string name="crow_0">Введите код, чтобы начать посвящение</string>
    <string name="crow_1">Клянусь стремиться к знаниям</string>
    <string name="crow_2">Клянусь хоть раз крикнуть "Дайте поспать" тем, кто кричит "Халява, приди!"</string>
    <string name="crow_3">Клянусь хоть раз спеть в общежитии с друзьями под гитару песню "Растолстела"</string>
    <string name="crow_4">Клянусь учиться в Вышке, пока три незача не разлучат нас</string>
    <string name="crow_5">Клянусь быть верным духу Вышки</string>
    <string name="crow_6">Клянусь с уважением относиться к студентам и преподавателям</string>
    <string name="crow_7">Клянусь верить в себя и не сдаваться. Даже если я попал на пересдачу, на комиссию или в Армию.</string>
    <string name="action_settings">Settings</string>
    <string name="next">Далее</string>
    <string name="previous">Назад</string>
    <string name="start_dedication">Начать</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about_organisation">AboutOrganisationActivity</string>

    <string name="map_menu_quest">Квест</string>
    <string name="map_menu_ball">Спорт</string>
    <string name="map_menu_paper">Лекции</string>
    <string name="map_menu_tent">Шатры</string>
    <string name="map_menu_microphone">Микрофоны</string>

    <string name="cardview_time_string"><b>Время: </b></string>
    <string name="cardview_person_string"><u>Лектор: </u></string>
    <string name="cardview_title_string"><u>Название: </u></string>
    <string name="cardview_contacts_string"><u>Контакты: </u></string>

    <string name="tent_time_1">14:00 &#8211; 19:00</string>
    <string name="tent_title_1">Веранда нетворкинга</string>
    <string name="tent_text_1">&#8211;Игра от Бизнес-инкубатора НИУ ВШЭ \n В игре может участвовать любое количество человек. Она займет полчаса, в течение которых  люди с идеями попытаются найти все
     необходимые ресурсы, заручиться нужной поддержкой и гордо выйти со своим стартапом на IPO. \n &#8211; Консультанты Бизнес-инкубатора \n &#8211; Библиотека</string>

    <string name="open_comments">Комментарии</string>
    <string name="why_login">Войди в приложение, используя Facebook или ВКонтакте, чтобы иметь возможность комментирования событий.</string>
    <string name="title_activity_comments">ActivityComments</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
