<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login_vk"
            android:fontFamily="sans-serif-light"
            android:icon="@drawable/ic_login_50"
            android:textStyle="normal"
            android:title="@string/navigation_login" />
        <item
            android:id="@+id/nav_map"
            android:checked="true"
            android:fontFamily="sans-serif-light"
            android:icon="@drawable/ic_map_black_24dp"
            android:textStyle="normal"
            android:title="@string/navigation_map" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_faculties"
            android:fontFamily="sans-serif-light"
            android:icon="@drawable/ic_school_black_24dp"
            android:textStyle="normal"
            android:title="@string/navigation_faculties" />
        <item
            android:id="@+id/nav_organisations"
            android:fontFamily="sans-serif-light"
            android:icon="@drawable/ic_group_black_24dp"
            android:textStyle="normal"
            android:title="@string/navigation_organisations" />
        <item
            android:id="@+id/nav_aboutHSE"
            android:fontFamily="sans-serif-light"
            android:icon="@drawable/ic_info_black_24dp"
            android:textStyle="normal"
            android:title="@string/navigation_aboutHSE" />
        <item
            android:id="@+id/nav_logout"
            android:fontFamily="sans-serif-light"
            android:icon="@drawable/ic_logout_50"
            android:textStyle="normal"
            android:title="@string/navigation_logout" />
    </group>

</menu>
