<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/map_quest_mark"
            android:actionViewClass="android.widget.CheckBox"
            android:checkable="true"
            android:checked="true"
            android:title="@string/map_menu_quest"
            app:showAsAction="never" />
        <item
            android:id="@+id/map_ball"
            android:actionViewClass="android.widget.CheckBox"
            android:checkable="true"
            android:checked="true"
            android:title="@string/map_menu_ball"
            app:showAsAction="never" />
        <item
            android:id="@+id/map_tent"
            android:actionViewClass="android.widget.CheckBox"
            android:checkable="true"
            android:checked="true"
            android:title="@string/map_menu_tent"
            app:showAsAction="never" />
        <item
            android:id="@+id/map_paper"
            android:actionViewClass="android.widget.CheckBox"
            android:checkable="true"
            android:checked="true"
            android:title="@string/map_menu_paper"
            app:showAsAction="never" />
        <item
            android:id="@+id/map_microphone"
            android:actionViewClass="android.widget.CheckBox"
            android:checkable="true"
            android:checked="true"
            android:title="@string/map_menu_microphone"
            app:showAsAction="never" />
    </group>
</menu>
