<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".DialogFragments.DialogLogin"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal"
    android:padding="15dp">

    <Button
        android:id="@+id/login_vk_button"
        android:background="@drawable/vk_button_round_corners"
        android:layout_marginBottom="15dp"
        android:drawableLeft="@drawable/vk_button_round_corners"
        android:text="@string/continue_with_vk"
        android:layout_width="200dp"
        android:layout_height="27dp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="13sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:layout_width="80dp"
            android:background="@color/com_facebook_button_background_color_focused_disabled"
            android:layout_height="0.5dp"
            android:layout_marginTop="9dp"></View>
        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textAlignment="center" />
        <View
            android:layout_width="80dp"
            android:background="@color/com_facebook_button_background_color_focused_disabled"
            android:layout_height="0.5dp"
            android:layout_marginTop="9dp"></View>

    </LinearLayout>
    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_facebook_button"
        android:layout_height="40dp"
        android:layout_width="200dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/login_back"
            android:textColor="@color/dialog_button_color_blue"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

</LinearLayout>


