<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context="org.styleru.hseday2017_2.MainActivity"

    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:elevation="5dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/why_login"
            android:textAlignment="center"
            android:textColor="@color/secondary_text"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:textStyle="normal"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="25dp">

            <Button
                android:id="@+id/login_vk_button"
                android:layout_width="200dp"
                android:layout_height="27dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/vk_button_round_corners"
                android:drawableLeft="@drawable/vk_button_round_corners"
                android:text="@string/continue_with_vk"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="80dp"
                    android:layout_height="0.5dp"
                    android:background="@color/com_facebook_button_background_color_focused_disabled" />

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textAlignment="center" />

                <View
                    android:layout_width="80dp"
                    android:layout_height="0.5dp"
                    android:background="@color/com_facebook_button_background_color_focused_disabled" />

            </LinearLayout>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_facebook_button"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>


